Fix color and title alignment

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,14 @@ body {
     background-color: #facc15;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     border-radius: 3px;
+    
+    display: flex;
+}
+.title {
+    color: #f9fafb;
+    padding-left: 1rem;
+    margin: 0;
+    align-self: center;
 }
 
 .projects {
